music: allow admin to remove single track from selection and playlist
